; ModuleID = '/home/carl/AnghaBench/anypixel/firmware/controller/ThirdParty/ETH/src/extr_stm32f4x7_eth.c_ETH_MMCCounterHalfPreset.c'
source_filename = "/home/carl/AnghaBench/anypixel/firmware/controller/ThirdParty/ETH/src/extr_stm32f4x7_eth.c_ETH_MMCCounterHalfPreset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@ETH_MMCCR_MCFHP = common dso_local global i32 0, align 4
@ETH = common dso_local global %struct.TYPE_2__* null, align 8
@ETH_MMCCR_MCP = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ETH_MMCCounterHalfPreset() #0 {
  %1 = load i32, i32* @ETH_MMCCR_MCFHP, align 4
  %2 = xor i32 %1, -1
  %3 = load %struct.TYPE_2__*, %struct.TYPE_2__** @ETH, align 8
  %4 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = and i32 %5, %2
  store i32 %6, i32* %4, align 4
  %7 = load i32, i32* @ETH_MMCCR_MCP, align 4
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** @ETH, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = or i32 %10, %7
  store i32 %11, i32* %9, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
